# EpiKodi

./: .gitignore  CMakeLists.txt  README.md  index.html  package-lock.json  package.json  setup.bat  setup.sh  tailwind.config.js
config/: config.example.json
include/api/: MusicBrainzApiClient.h  OMDbApiClient.h  TMDbApiClient.h
include/managers/: FavoritesManager.h
include/models/: Album.h  Artist.h  Movie.h  Series.h
include/player/: MediaPlayer.h
include/ui/: FavoritesWidget.h  MainWindow.h  MovieCard.h  MovieWidget.h  MusicWidget.h  PlayerWidget.h  SeriesCard.h  SeriesWidget.h
resources/: resources.qrc
resources/styles/: dark.qss
src/: App.tsx  index.css  main.cpp
src/api/: MusicBrainzApiClient.cpp  OMDbApiClient.cpp  TMDbApiClient.cpp
src/components/: AlbumDetails.tsx  Layout.tsx  MediaCard.tsx  MediaDetails.tsx  MusicPlayer.tsx  Navigation.tsx
src/components/tabs/: FavoritesTab.tsx  MoviesTab.tsx  MusicTab.tsx  SeriesTab.tsx
src/context/: FavoritesContext.tsx
src/managers/: FavoritesManager.cpp
src/models/: Album.cpp  Artist.cpp  Movie.cpp  Series.cpp
src/player/: MediaPlayer.cpp
src/services/: deezer.ts  tmdb.ts
src/types/: index.ts
src/ui/: FavoritesWidget.cpp  MainWindow.cpp  MovieCard.cpp  MovieWidget.cpp  MusicWidget.cpp  PlayerWidget.cpp  SeriesCard.cpp  SeriesWidget.cpp
